--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,9 @@
 ## Common ##
-
 # Auto detect text files and perform LF normalization
 *          text=auto
-
 #
 # The above will handle all files NOT found below
 #
-
 # Documents
 *.bibtex   text diff=bibtex
 *.doc      diff=astextplain
@@ -31,7 +28,6 @@
 *.txt      text
 *.sql      text
 *.epub     diff=astextplain
-
 # Graphics
 *.png      binary
 *.jpg      binary
@@ -46,7 +42,6 @@
 # use the following line instead.
 # *.svg    binary
 *.eps      binary
-
 # Scripts
 *.bash     text eol=lf
 *.fish     text eol=lf
@@ -57,14 +52,12 @@
 *.bat      text eol=crlf
 *.cmd      text eol=crlf
 *.ps1      text eol=crlf
-
 # Serialisation
 *.json     text
 *.toml     text
 *.xml      text
 *.yaml     text
 *.yml      text
-
 # Archives
 *.7z       binary
 *.bz       binary
@@ -85,25 +78,19 @@
 *.Z        binary
 *.zip      binary
 *.zst      binary
-
 # Text files where line endings should be preserved
 *.patch    -text
-
 #
 # Exclude files from exporting
 #
-
 .gitattributes export-ignore
 .gitignore     export-ignore
 .gitkeep       export-ignore
-
 ## Visual Studio ##
-
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 *            text=auto
-
 ###############################################################################
 # Set the merge driver for project and solution files
 #
@@ -115,7 +102,6 @@
 # intervention with every merge. To do so, just comment the entries below and
 # uncomment the group further below
 ###############################################################################
-
 *.sln        text eol=crlf
 *.csproj     text eol=crlf
 *.vbproj     text eol=crlf
@@ -128,13 +114,10 @@
 *.modelproj  text eol=crlf
 *.sqlproj    text eol=crlf
 *.wwaproj    text eol=crlf
-
 *.xproj      text eol=crlf
 *.props      text eol=crlf
 *.filters    text eol=crlf
 *.vcxitems   text eol=crlf
-
-
 #*.sln       merge=binary
 #*.csproj    merge=binary
 #*.vbproj    merge=binary
@@ -147,33 +130,23 @@
 #*.modelproj merge=binary
 #*.sqlproj   merge=binary
 #*.wwaproj   merge=binary
-
 #*.xproj     merge=binary
 #*.props     merge=binary
 #*.filters   merge=binary
 #*.vcxitems  merge=binary
-
 ## Visual Studio Code ##
-
 # Fix syntax highlighting on GitHub to allow comments
 .vscode/*.json linguist-language=JSON-with-Comments
-
 ## Markdown ##
-
 # Apply override to all files in the directory
 *.md linguist-detectable
-
-
 ## Unity ##
-
 # Define macros (only works in top-level gitattributes files)
 [attr]lfs               filter=lfs diff=lfs merge=lfs -text
 [attr]unity-json        eol=lf linguist-language=json
 [attr]unity-yaml        merge=unityyamlmerge eol=lf linguist-language=yaml
-
 # Optionally collapse Unity-generated files on GitHub diffs
 # [attr]unity-yaml        merge=unityyamlmerge text linguist-language=yaml linguist-generated
-
 # Unity source files
 *.cginc                 text
 *.compute               text linguist-language=hlsl
@@ -181,7 +154,6 @@
 *.hlsl                  text linguist-language=hlsl
 *.raytrace              text linguist-language=hlsl
 *.shader                text
-
 # Unity JSON files
 *.asmdef                unity-json
 *.asmref                unity-json
@@ -189,12 +161,10 @@
 *.inputactions          unity-json
 *.shadergraph           unity-json
 *.shadersubgraph        unity-json
-
 # Unity UI Toolkit files
 *.tss                   text diff=css linguist-language=css
 *.uss                   text diff=css linguist-language=css
 *.uxml                  text linguist-language=xml linguist-detectable
-
 # Unity YAML
 *.anim                  unity-yaml
 *.asset                 unity-yaml
@@ -221,18 +191,14 @@
 *.spriteatlasv2         unity-yaml
 *.terrainlayer          unity-yaml
 *.unity                 unity-yaml
-
 # "physic" for 3D but "physics" for 2D
 *.physicMaterial        unity-yaml
 *.physicsMaterial2D     unity-yaml
-
 # Exclude third-party plugins from GitHub stats
 Assets/Plugins/**       linguist-vendored
-
 # Unity LFS
 *.cubemap               lfs
 *.unitypackage          lfs
-
 # 3D models
 *.3dm                   lfs
 *.3ds                   lfs
@@ -254,7 +220,6 @@ Assets/Plugins/**       linguist-vendored
 *.skp                   lfs
 *.stl                   lfs
 *.ztl                   lfs
-
 # Audio
 *.aif                   lfs
 *.aiff                  lfs
@@ -265,7 +230,6 @@ Assets/Plugins/**       linguist-vendored
 *.s3m                   lfs
 *.wav                   lfs
 *.xm                    lfs
-
 # Video
 *.asf                   lfs
 *.avi                   lfs
@@ -276,7 +240,6 @@ Assets/Plugins/**       linguist-vendored
 *.mpg                   lfs
 *.ogv                   lfs
 *.wmv                   lfs
-
 # Images
 *.bmp                   lfs
 *.exr                   lfs
@@ -292,7 +255,6 @@ Assets/Plugins/**       linguist-vendored
 *.tif                   lfs
 *.tiff                  lfs
 *.webp                  lfs
-
 # Compressed Archive
 *.7z                    lfs
 *.bz2                   lfs
@@ -300,38 +262,28 @@ Assets/Plugins/**       linguist-vendored
 *.rar                   lfs
 *.tar                   lfs
 *.zip                   lfs
-
 # Compiled Dynamic Library
 *.dll                   lfs
 *.pdb                   lfs
 *.so                    lfs
-
 # Fonts
 *.otf                   lfs
 *.ttf                   lfs
-
 # Executable/Installer
 *.apk                   lfs
 *.exe                   lfs
-
 # Documents
 *.pdf                   lfs
-
 # ETC
 *.a                     lfs
 *.reason                lfs
 *.rns                   lfs
-
 # Spine export file for Unity
 *.skel.bytes            lfs
-
 # Exceptions for .asset files such as lightning pre-baking
 LightingData.asset     binary
-
 ## Python ##
-
 # Basic .gitattributes for a python repo.
-
 # Source files
 # ============
 *.pxd    text diff=python
@@ -341,7 +293,6 @@ LightingData.asset     binary
 *.pyx    text diff=python
 *.pyz    text diff=python
 *.pyi    text diff=python
-
 # Binary files
 # ============
 *.db     binary
@@ -351,11 +302,12 @@ LightingData.asset     binary
 *.pyc    binary export-ignore
 *.pyo    binary export-ignore
 *.pyd    binary
-
 # Jupyter notebook
 *.ipynb  text eol=lf
-
 # Note: .db, .p, and .pkl files are associated
 # with the python modules ``pickle``, ``dbm.*``,
 # ``shelve``, ``marshal``, ``anydbm``, & ``bsddb``
 # (among others).
+.mp3 filter=lfs diff=lfs merge=lfs -text
+.wav filter=lfs diff=lfs merge=lfs -text
+.ogg filter=lfs diff=lfs merge=lfs -text
