--- a/unity/desktop-version/Packages/manifest.json
+++ b/unity/desktop-version/Packages/manifest.json
@@ -12,8 +12,11 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.13.1",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.physics": "1.3.14",
     "com.unity.purchasing": "4.12.2",
     "com.unity.render-pipelines.core": "17.0.4",
+    "com.unity.render-pipelines.high-definition": "17.0.4",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.render-pipelines.universal-config": "17.0.3",
     "com.unity.rendering.light-transport": "1.0.1",
